# linux_imsiservo

./: .gitignore  AIPromptWindow.xaml  AIPromptWindow.xaml.cs  AbsMoveControl.xaml  AbsMoveControl.xaml.cs  App.xaml  App.xaml.cs  CircularMoveControl.xaml  CircularMoveControl.xaml.cs  CounterControl.xaml  CounterControl.xaml.cs  DebugOutputWindow.xaml  DebugOutputWindow.xaml.cs  EtherCAT_Studio.csproj  EtherCAT_Studio.sln  GenericControl.xaml  GenericControl.xaml.cs  GotoControl.xaml  GotoControl.xaml.cs  LinearMoveControl.xaml  LinearMoveControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MotionControl.xaml  MotionControl.xaml.cs  NodeControl.cs  OllamaSequenceGenerator.cs  PropertyWindow.xaml  PropertyWindow.xaml.cs  RelMoveControl.xaml  RelMoveControl.xaml.cs  WaitControl.xaml  WaitControl.xaml.cs
File/: debug_output_20260201_092620.txt  test1.ethercat  test1.json  test2.ethercat  test2.json  test3.ethercat  test4.ethercat  test4.json  test5.ethercat
linux_adapter/: CMakeLists.txt
linux_adapter/include/: LSAdapter.h  SequenceRunner.h  SequenceTypes.h
linux_adapter/src/: LSAdapter.cpp  SequenceRunner.cpp  main.cpp
spec/: exec_protocol.json  linux_port_plan.txt  sequence_example.json  sequence_schema.json
